<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="dutPul" Id="{b51280c3-2042-413a-a298-d7cbcc88d01e}">
    <Declaration><![CDATA[TYPE dutPul :
STRUCT
	xPul:BOOL;		// IN Pulsador
	xPil:BOOL;		// OUT Piloto

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>