<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="_12_INTRO" Id="{0d2030cb-5662-4d87-8e2f-20bd1bb5a184}">
    <Declaration><![CDATA[TYPE _12_INTRO :
STRUCT
	///+++++++++++++++++++++++++++++++++++++++
	///HARD
	///+++++++++++++++++++++++++++++++++++++++
	v050_Fast: dutValve;
	v051_Slow: dutValve;
	v052_toTP: dutValve;
	v053_SaltTK1: dutValve;
	v054_SaltTK2: dutValve;
	v055_Mod: dutAIn;
	b056_Intro_Pump:dutpump;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>